<resources>
    <string name="app_name">Biblioteca</string>
    <string name="iniciasesion">Iniciar Sesion</string>
    <string name="creatucuenta">Crea Tu Cuenta</string>
    <string name="info">Ven a leer y deja que tu imaginación pueda volar sin limites</string>
    <string name="infosignin">Disfruta de miles de libros en la palma de tu mano</string>
    <string name="correo">Escriba su correo</string>
    <string name="pass">Escriba su contraseña</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="crearcuenta">No estás registrado?</string>
    <string name="tienecuenta">Ya tienes cuenta?</string>
    <string name="crearcuenta2">Crear cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="librosDisponibles">Libros Disponibles</string>
    <string name="Prestados">Prestados</string>
    <string name="Agregar">Agregar</string>
    <string name="Salir">Salir</string>
    <string name="administrador">Administrador</string>
    <string name="agregarLibro">Agregar Libro</string>
    <string name="nombreLibro">Nombre</string>
    <string name="autorLibro">Autor</string>
    <string name="cantidadLibro">Cantidad de Libros</string>
    <string name="urlLibro">Url del libro</string>
    <string name="imagenLibro">Imagen del libro</string>
    <string name="descripcionLibro">Descripcion del libro</string>
    <string name="actualizarLibro">Actualizar Libro</string>
    <string name="miLibro">Mi Libro</string>
    <string name="prestarLibro">Prestar Libro</string>
    <string name="misLibrosPrestados">Mis Libros Prestados</string>
    <string name="prestar">Prestar</string>
    <string name="ver">Ver</string>
    <string name="devolver">Devolver</string>
    <string name="fecha">Fecha Prestamo</string>
    <string name="libroaPrestados">Libros Prestados</string>
    <string name="correoelectronico">Correo</string>
    <string name="buscar">Buscar</string>
</resources>