<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".login.SigninActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="#CAC0C0"
        android:textSize="34sp"
        android:textStyle="bold"
        android:text="@string/creatucuenta" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/infosignin"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textColor="#4E4C4C"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="12dp"
        android:paddingLeft="20dp"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/txtCorreosignin"
        android:layout_width="match_parent"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="80dp"
        android:paddingLeft="20dp"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="190dp" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="259dp"
        android:paddingLeft="20dp"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="match_parent"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="353dp"
        android:paddingLeft="20dp"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/back_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAllCaps="true"
        android:textColor="#BAA7A7"
        android:textSize="16sp"
        android:text="@string/registrarse" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tienecuenta"
        android:textAlignment="center"
        android:textColor="#877A7A"/>

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="match_parent"
        android:text="@string/iniciasesion"
        android:layout_height="33dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/back_login_btnlogin"
        android:textColor="#801C1C"
        android:textSize="12sp"/>
</LinearLayout>