<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".admin.AdminAgregarLibroActivity">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/agregarLibro"
        android:textColor="#CAC0C0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nombreAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/nombreLibro"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/autorAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/autorLibro"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/cantidadAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/cantidadLibro"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/urlAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/urlLibro"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/imagenAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/imagenLibro"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/descripcionAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:hint="@string/descripcionLibro"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAgregarLibro"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/back_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/agregarLibro"
        android:textAllCaps="true"
        android:textColor="#BAA7A7"
        android:textSize="16sp" />
</LinearLayout>