<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".admin.AdminActualizarLibroActivity">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/actualizarLibro"
        android:textColor="#CAC0C0"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nombreActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:labelFor="@+id/textNombre"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textAutor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/autorLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/autorActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:labelFor="@+id/textAutor"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cantidadLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/cantidadActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:labelFor="@+id/textCantidad"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/urlLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/urlActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:labelFor="@+id/textUrl"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imagenLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/imagenActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:labelFor="@+id/textImagen"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcionLibro"
        android:textColor="#656565"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/descripcionActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/back_login_txt"
        android:ems="10"
        android:labelFor="@+id/textDescripcion"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textAlignment="textStart"
        android:textColor="#D6D4D4"
        android:textColorHint="#C3BEBE"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnActualizarLibro"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/back_login"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/actualizarLibro"
        android:textAllCaps="true"
        android:textColor="#BAA7A7"
        android:textSize="16sp" />

</LinearLayout>