<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    app:cardBackgroundColor="#E4E3E3"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imagenLibrosPrestados"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:src="@drawable/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombreLibro"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtItemTituloPrestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_blanco"
                android:textAlignment="center"
                android:labelFor="@+id/textView7"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/autorLibro"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtItemAutorPrestado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/back_blanco"
                android:labelFor="@+id/textView8"
                android:textAlignment="center"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtItemDescripcionPrestados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/textView9"
                android:background="@drawable/back_blanco"
                android:textAlignment="center"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>