<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".admin.AdminLibroHistorialActivity">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/miLibro"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="#CAC0C0"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageMiLibroAdmin"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:id="@+id/tituloMiLibroAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#AAA8A8"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/autorMiLibroAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#5A5959"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/descripcionMiLibroAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#6C6B6B" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/back_login_txt"
        android:layout_margin="30dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/back_negro"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/nombreLibro"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/back_negro"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/telefono"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/back_negro"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/correoelectronico"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>